@@ -55,19 +55,19 @@ a80a54cfe4673d90783a3ba49f9b4535 *man/summary.pairwise.Rd
 f22bbf5e151d912a8efcb00990a588fa *man/trajectory.analysis.Rd
 600001722c89e75928dbe4984812fdc5 *man/vec.cor.matrix.Rd
 8dd28dfe65e0542561bc6096514f7d94 *NAMESPACE
-f395be5f4508f5797655db5ff7e14e38 *NEWS
+ca96299e95ce724c622b9d32b26ab3d0 *NEWS
 262059f161b3a6bef292cdd97fc9c414 *R/anova.lm.rrpp.r
 c2cda15833b34d15cbc97c9cd4530666 *R/classify.r
 52536f21f7ea4cdcfa3ebfe15b4ffbac *R/coef.lm.rrpp.r
 a022c6ffaaa6d4af5742bc1b3994d012 *R/lm.rrpp.r
-4d1bf36a62e32fe02971db798b61a7a7 *R/manova.update.r
+10b4f87d160a6c9a93012bea6ecddac3 *R/manova.update.r
 d0c2e9bfde3601544d96c22161e1e4ae *R/model.comparison.r
 fdda74b2c42e5ae7ddcb00ef0693da96 *R/pairwise.r
 d0ba1ce3ec27cb68ab30db856e025784 *R/predict.lm.rrpp.r
 be65a023ec04fe716867de7a1907b645 *R/reveal.model.designs.r
 45f6358b38629f248672af769df9237d *R/RRPP.support.code.r
 b89fcf6916542d1b9659736f4699c83c *R/RRPP.utils.r
-89843e939b7cd289a5b651730bae8b8f *R/shared.support.code.r
+7b0567386b877e39cd8f6b38ef3babe5 *R/shared.support.code.r
 cb7993a4baab56437c76a0b66786c1e5 *R/trajectory.analysis.r
 987d403df491c09b6db91776c4443a53 *README.md
 7db72b7e01004751c5cf9d9eb2c9122c *RRPP.Rproj
