@@ -1,6 +1,7 @@
 RRPP VERSION 0.4.1.9000 (Development)
 
 BUG FIXES 
+    o Fixed eigen absolute eigen value issue with Cov.proj.
     o Added forgotten code from last update to fix non-full rank design matrices.
     o Fixed trajectory.analysis traj.list issue, to not use grep for sorting trajectories.  (Now lexical ordering of interactions is used.)
     o Changed det to determinant in all needing functions, to use modulus for 
